--- a/ui/html/create.page.html
+++ b/ui/html/create.page.html
@@ -3,6 +3,8 @@
 
 {{define "body"}}
 <form action="/snippet/create" method="post">
+    <!-- Include the CSRF token -->
+    <input type="hidden" name="csrf_token" value='{{.CSRFToken}}'>
     {{with .Form}}
     <div>
         <label>Title:</label>
